[tool.poetry]
name = "rpocket"
version = "0.1.0"
description = ""
authors = ["revego <revego@code4you.cloud>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
psycopg2-binary = "^2.9.9"
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
